# wasm-experiment

./: .gitignore  README.md  assemble.sh  convert_wasm.py  flake.nix  pico8.pal  sprites.chr
buildtool/: Cargo.toml  README.md
buildtool/src/: commands.rs  config.rs  main.rs  toml_path.rs
buildtool/src/assets/: main.wat
editor/: Cargo.toml
editor/src/: main.rs  options.rs  pal_entry.rs
engine/: CMakeLists.txt  Dockerfile  README.md  dev_env.sh  docker_build.sh  flake.nix  module.nix
engine/assets/: font.4bpp  wii-meta.xml
engine/src/: api.c  cartridge.h  f_sel.c  f_sel.h  file_list.c  file_list.h  game.c  game.h  game_menu.c  game_menu.h  main.c  main.h  platform.h
engine/src/gcwii/: graphics.c  graphics.h  keys.h  keys_gamecube.c  platform.c  platform_impl.c  wii_keys.c
engine/src/linux/: graphics.c  graphics.h  main.c  platform.c  platform_impl.c
engine/src/nds/: graphics.c  graphics.h  keys.c  keys.h  main.c  platform.c  platform_impl.c
engine/src/wii/: graphics.c  keys.c  keys.h  platform_impl.c
examples/bunnies-rust/: Cargo.toml
examples/bunnies-rust/src/: lib.rs
langs/: README.md
langs/assemblyscript/: package-lock.json  package.json
langs/assemblyscript/assembly/: env.ts  index.ts
langs/assemblyscript/examples/bunnies/assembly/: index.ts
langs/assemblyscript/examples/simple/: WASMCarts.toml  flake.nix
langs/assemblyscript/examples/simple/assets/: spr.4bpp
langs/assemblyscript/examples/simple/src/: env.ts  main.ts
langs/assemblyscript/examples/snake/: WASMCarts.toml
langs/assemblyscript/examples/snake/assembly/: env.ts  index.ts  tsconfig.json
langs/assemblyscript/examples/snake/src/: main.ts
langs/golang/examples/simple/: WASMCarts.toml  flake.nix  go.mod
langs/golang/examples/simple/src/: env.go  main.go
langs/golang/examples/snake/: build.sh  main.go
langs/rust/: Cargo.toml  README.md
langs/rust/crates/wasm_experiment/: Cargo.toml  stack_string.rs
langs/rust/crates/wasm_experiment/src/: api.rs  game_state.rs  lazy_mut.rs  lib.rs  text.rs
langs/rust/examples/bunnies/: Cargo.toml  WASMCarts.toml  flake.nix
langs/rust/examples/bunnies/src/: lib.rs
langs/rust/examples/simple/: WASMCarts.toml
langs/rust/examples/simple/src/: lib.rs
langs/rust/examples/snake/: Cargo.toml  WASMCarts.toml
langs/rust/examples/snake/src/: circ_buf.rs  lib.rs
langs/rust/src/: circ_buf.rs  env.rs  index.rs  lib.rs
langs/wat/colors/: .gitignore  WASMCarts.toml  flake.nix
langs/wat/colors/src/: main.wat
langs/wat/simple/: .gitignore  WASMCarts.toml
langs/wat/simple/src/: main.wat
nds/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  compile.sh  dev_env.sh  docker_build.sh
nds/assemblyscript/: asconfig.json  package.json
nds/assemblyscript/assembly/: env.ts  index.ts  nds.ts
nds/rust/: Cargo.toml  build.sh
nds/rust/src/: circ_buf.rs  index.rs  lib.rs
nds/source/: api.c  api.h  cartridge.c  cartridge.h  main.c  main.cpp  memory.c  memory.h  nds.c  nds.cpp  nds.h  platform.c  platform.h
nds/source/nds/: graphics.c  graphics.h  platform_impl.c  system.c  system.h
nds/src/: main.c
nds/src/nds/: graphics.c
