[package]
name = "rust-wasm-snake"
version = "0.1.0"
edition = "2021"

# [dependencies]
# wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib"]

# [profile.release]
# opt-level = "z"         # Optimize for size (or "s" for a trade-off)
# lto = true              # Enable Link Time Optimization
# panic = "abort"         # Use abort on panic to reduce overhead
# codegen-units = 1       # Fewer codegen units can improve optimization

